latest update with car model ( verification commented out, can be added back in)